[gd_scene load_steps=13 format=2]

[ext_resource path="res://Experimental_Assets/fonts/Orbitron/Orbitron-VariableFont:wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Experimental_Assets/fonts/Quantico/Quantico-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/PAUSE_SCRIPT.gd" type="Script" id=3]
[ext_resource path="res://Scene/Main Screen.tscn" type="PackedScene" id=4]
[ext_resource path="res://Music/click_001.ogg" type="AudioStream" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Default"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Pause-End"
tracks/0/type = "value"
tracks/0/path = NodePath("EXIT:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 3 ),
"update": 0,
"values": [ Vector2( 415, 345 ), Vector2( 415, 727 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Main menu:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 3 ),
"update": 0,
"values": [ Vector2( 415, 280 ), Vector2( -314, 280 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Resume:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 3 ),
"update": 0,
"values": [ Vector2( 415, 220 ), Vector2( 1128, 220 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Title:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 3 ),
"update": 0,
"values": [ Vector2( 266.5, 0 ), Vector2( 266.5, -400 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ColorRect:color")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.196078 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("EXIT:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 0.378929, 1 ),
"update": 0,
"values": [ Vector2( 415, 700 ), Vector2( 415, 345 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Main menu:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 0.196146, 1 ),
"update": 0,
"values": [ Vector2( 1241, 280 ), Vector2( 415, 280 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Resume:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 0.153893, 1 ),
"update": 0,
"values": [ Vector2( -282, 220 ), Vector2( 415, 220 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Title:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 0.125, 1 ),
"update": 0,
"values": [ Vector2( 266.5, -125 ), Vector2( 266.5, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Title:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Resume:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Main menu:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("EXIT:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath(".:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("ColorRect:color")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.0313726, 0.0313726, 0.0313726, 0 ), Color( 0.0235294, 0.0235294, 0.0235294, 0.592157 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="InputEventKey" id=6]
scancode = 16777221

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[node name="Pause_Menu" type="Node2D"]
pause_mode = 2
z_index = 100
script = ExtResource( 3 )
Main_menu = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Default"
anims/Default = SubResource( 1 )
anims/Pause-End = SubResource( 2 )
anims/Pause-Start = SubResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = -1071.0
margin_top = -841.0
margin_right = -1031.0
margin_bottom = -801.0
rect_scale = Vector2( 80, 60 )
color = Color( 0.0235294, 0.0235294, 0.0235294, 0.592157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 266.5
margin_right = 757.5
margin_bottom = 105.0
custom_fonts/font = SubResource( 4 )
text = "PAUSE MENU"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 415.0
margin_top = 220.0
margin_right = 609.0
margin_bottom = 271.0
focus_mode = 0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.992157, 0.984314, 0.984314, 1 )
custom_colors/font_color_hover = Color( 0.305882, 0.305882, 0.305882, 1 )
custom_colors/font_color_pressed = Color( 0.992157, 0.301961, 0.301961, 1 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
shortcut = SubResource( 7 )
text = "RESUME"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main menu" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 415.0
margin_top = 280.0
margin_right = 609.0
margin_bottom = 333.0
focus_mode = 0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.992157, 0.984314, 0.984314, 1 )
custom_colors/font_color_hover = Color( 0.305882, 0.305882, 0.305882, 1 )
custom_colors/font_color_pressed = Color( 0.992157, 0.301961, 0.301961, 1 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "MAIN MENU"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EXIT" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 415.0
margin_top = 345.0
margin_right = 609.0
margin_bottom = 398.0
focus_mode = 0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.992157, 0.984314, 0.984314, 1 )
custom_colors/font_color_hover = Color( 0.305882, 0.305882, 0.305882, 1 )
custom_colors/font_color_pressed = Color( 0.992157, 0.301961, 0.301961, 1 )
enabled_focus_mode = 0
text = "EXIT"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Click_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="button_down" from="Resume" to="." method="_on_Resume_button_down"]
[connection signal="pressed" from="Main menu" to="." method="_on_Main_menu_pressed"]
[connection signal="button_down" from="EXIT" to="." method="_on_EXIT_button_down"]
